--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.ui-layout {
+  display: flex;
+}
+
+.ui-sidebar {
+  width: 220px;
+  background: silver;
+  border-right: 1px solid #f0f0f0;
+  min-height: 100vh;
+  position: fixed;
+}
+.ui-vertical-menu img {
+  margin-right: 10px;
+  width: 19px;
+}
